# fastapi_base

./: .env.example  .gitignore  README.md  alembic.ini  debug.py  pyproject.toml
alembics/: env.py
alembics/versions/: _0001_d6d3b53e2821_init_db.py
app/: app.py
app/api/: __init__.py  base.py  users.py
app/crud/: __init__.py  users.py
app/db/: __init__.py  get_db.py  mysql.py  redis.py
app/jobs/: __init__.py  jobs.py
app/logs/: logging.conf
app/models/: __init__.py  models_a.py  models_co.py  models_config.py
app/schemas/: __init__.py  base.py  users.py
app/settings/: settings.py
app/utils/: auth.py  common.py  http_exception.py  message.py  password.py
