[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Hieu <hieudv.iot@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = { extras = ["standard"], version = "^0.15.0" }
SQLAlchemy = "^1.4.27"
alembic = "^1.7.5"
python-dotenv = "^0.19.2"
mysql-connector-python = "^8.0.27"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
fastapi-jwt-auth = "^0.5.0"
redis = "^4.0.1"
tomlkit = "^0.11.0"
cryptography = "^37.0.3"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
create_migration = "app.jobs:create_migration"
upgrade_migration = "app.jobs:upgrade_migration"
downgrade_migration = "app.jobs:downgrade_migration"